<resources>
    <array name="drawer_titles">
        <item>Allg. Vertretungsplan</item>
        <item>Mein Vertretungsplan</item>
    </array>

    <string name="app_name">Vertretungsplan ITG</string>
    <string name="vertretungsplan_header">Vertretungen</string>
    <string name="absent_classes_header">Abwesende Klassen</string>

    <!-- First Start Activity -->
    <string name="firststart_welcome">Vertretungsplan-App für das Ignaz-Taschner Gymnasium</string>
    <string name="next">Fortsetzen</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="login">Anmelden</string>
    <string name="login_failed">Benutzername oder Passwort ist falsch</string>
    <string name="firststart_login">Bitte melden Sie sich mit den Benutzerinformationen für den Elternbereich an.</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">vertretungsplan.itgdah.de</string>
    <string name="content_authority">de.itgdah.vertretungsplan</string>
    <string name="date_stamp_key">vertretungsplan_last_updated</string>

    <string name="refresh">Aktualisieren</string>
    <string name="general_info_table_header">Allg. Infos</string>
    <string name="absent_classes_table_header">Abwesende Klassen</string>
    <string name="my_data">Meine Daten</string>
    <string name="my_data_done">Fertig</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="my_data_class">Klasse</string>
    <string name="my_data_subject">Fächer / Kurse</string>
    <string name="class_cannot_be_empty">Bitte fülle das Klassenfeld aus.</string>
    <string name="my_data_class_hint">z.B. 11, 11S (per Komma getrennt)</string>
    <string name="my_data_subject_hint">z. B. 1sk4, 1d7 (per Komma getrennt)</string>
</resources>
