<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#fff"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/firststart_login"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/primary" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/firststart_username"
        android:layout_below="@+id/textView5"
        android:hint="@string/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/firststart_password"
        android:layout_below="@+id/firststart_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/firststart_login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:textColor="@color/primary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/login_failed"
        android:id="@+id/firststart_error"
        android:gravity="center"
        android:textColor="#fff44336"
        android:layout_below="@+id/firststart_password"
        android:layout_alignRight="@+id/firststart_password"
        android:layout_alignEnd="@+id/firststart_password"
        android:layout_alignLeft="@+id/firststart_password"
        android:layout_alignStart="@+id/firststart_password"
        android:layout_marginTop="15dp"
        android:visibility="gone" />
</RelativeLayout>